--- a/global.css
+++ b/global.css
@@ -1,5 +1,21 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+
+body{
+    background-color: black;
+    color: aliceblue;
+    background-image:url('images/Group\ 4\ \(1\).png'), url('images/Serendale.ai\ \(2\).png');
+}
+
+img{
+    margin-bottom: 100px;
+    width: 100%;
 }
