--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ main {
     width: 1200px;
 }
 
-h1 {
+.titulo {
     text-align: center;
     font-family: "Space Grotesk", sans-serif;
 }
@@ -22,7 +22,7 @@ h1 {
     margin-top: 10px;
 }
 
-p {
+.paragrafo {
     text-align: center;
     width: 500px;
     margin: 0 auto;
@@ -31,7 +31,7 @@ p {
     
 }
 
-a{ 
+.btn{ 
     display: inline-block;
     padding: 13px;
     border-radius: 50px;
@@ -44,7 +44,7 @@ a{
     border: linear-gradient(90deg, rgba(255,59,255,1) 36%, rgba(236,191,191,1) 49%, rgba(92,36,255,1) 62%);;
 }
 
-a:hover{
+.btn:hover{
     border: 2px solid rgba(255,59,255,1);
     background: linear-gradient(black, transparent) padding-box, linear-gradient(to right, rgba(255,59,255,1), #0be6e6, rgba(92,36,255,1)) border-box;
     border-radius: 50px;
@@ -61,4 +61,3 @@ a:hover{
 .btn2 {
     margin-left: 9px;
 }
-
